attempt sort, get rid of unused routes in App.js

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -105,6 +105,8 @@ section {
 }
 body {
   line-height: 1;
+  /* background-image: url('./splash-image.jpg');
+  background-size: cover; */
 }
 ol,
 ul {
