--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -3,3 +3,20 @@
     flex-direction: column;
     align-items: center;
 } */
+
+.feed-title__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.questions-feed__container {
+    border: 2px solid rgb(181, 201, 243);
+    padding: 40px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(225, 225, 225, 0.8);
+}
