--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -1,5 +1,5 @@
 body {
     width: 100%;
     background-size: cover;
-    background-image: url('../../splash-image.jpg');
+    background-image: url('../../images/splash-image.jpg');
 }
