--- a/react-app/src/components/Footer.css
+++ b/react-app/src/components/Footer.css
@@ -3,6 +3,9 @@
 footer {
     color: #d8d9db;
     font-family: "Montserrat", sans-serif;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
 }
 
 .footer__container {
