--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -3,7 +3,8 @@
    height: 100%;
    justify-content: center;
    padding-right: 60%;
-   padding-top: 7%;
+   margin-top: 5%;
+   margin-bottom: 5%;
 }
 
 .login-form {
