--- a/react-app/src/components/auth/SIgnUpForm.css
+++ b/react-app/src/components/auth/SIgnUpForm.css
@@ -3,7 +3,7 @@
     height: 100%;
     justify-content: center;
     padding-right: 60%;
-    padding-top: 4%;
+    margin-top: 2%;
  }
 
  h1, label, .signup-button {
@@ -12,17 +12,22 @@
  }
 
  h1 {
-     margin-bottom: 20px;
+     margin-bottom: 15px;
      font-size: 20px;
  }
 
  .signup-form {
      border: 2px solid rgb(181, 201, 243);
-     padding: 40px;
+     padding: 25px 40px;
      border-radius: 4px;
      display: flex;
      flex-direction: column;
      background-color: rgba(225, 225, 225, 0.8);
+ }
+
+ .inputs__container {
+     display: flex;
+
  }
 
  .form-input__container {
@@ -38,13 +43,15 @@
  .form-input__birthday-container {
      display: flex;
      flex-direction: column;
+     align-items: center;
  }
 
  .form-input__date {
     border: 2px solid rgb(181, 201, 243);
     border-radius: 4px;
     padding: 5px 27px 5px 5px;
-    margin-top: 5px;
+    margin-top: 10px;
+    width: 200px;
  }
 
 
