--- a/react-app/src/components/auth/SIgnUpForm.css
+++ b/react-app/src/components/auth/SIgnUpForm.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 100%;
     justify-content: center;
-    padding-right: 60%;
+    margin-right: 50%;
     margin-top: 2%;
  }
 
