--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -20,3 +20,19 @@
     align-items: center;
     background-color: rgba(225, 225, 225, 0.8);
 }
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 300px;
+    right: 0px;
+    transition: all 0.2s linear;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0 8px 1px rgb(211, 211, 211);
+}
+
+.sidebar_container{
+    margin-left: 5%;
+    margin-top: 5%;
+}
