--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -32,7 +32,15 @@
     box-shadow: 0px 0 8px 1px rgb(211, 211, 211);
 }
 
-.sidebar_container{
+.sidebar_container {
     margin-left: 5%;
     margin-top: 5%;
+}
+
+.question__container {
+    border: 2px solid rgb(181, 201, 243);
+    border-radius: 4px;
+    padding: 20px;
+    width: 76%;
+    text-align: center;
 }
