edit delete questions only for sessionUser

--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -12,13 +12,18 @@
 }
 
 .questions-feed__container {
-    border: 2px solid rgb(181, 201, 243);
     padding: 40px;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(225, 225, 225, 0.8);
+    background-color: rgba(225, 225, 225, 0.685);
+    height: 40vh;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 .sidebar {
@@ -38,6 +43,7 @@
 }
 
 .question__container {
+    margin-top: 2%;
     border: 2px solid rgb(181, 201, 243);
     border-radius: 4px;
     padding: 20px;
