--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -2,6 +2,7 @@ body {
     width: 100%;
     background-size: cover;
     background-image: url('../../images/splash-image.jpg');
+    background-attachment: fixed;
 }
 
 .home-page__container {
