--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -88,6 +88,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: "Montserrat", sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article,
