minor css place holders

--- a/react-app/src/components/ResponsesDiv/ResponseDiv.css
+++ b/react-app/src/components/ResponsesDiv/ResponseDiv.css
@@ -6,11 +6,12 @@
     padding: 10px;
     background-color: rgb(181, 201, 243);
     font-family: "Montserrat", sans-serif;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .response__drop-down__button:hover {
     cursor: pointer;
+    background-color: rgb(105, 148, 241);
 }
 
 .response__drop-down {
