--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -11,6 +11,7 @@
 
 .question__sidebar-button:hover {
     cursor: pointer;
+    background-color: rgb(105, 148, 241);
 }
 
 .feed-title__container {
@@ -38,6 +39,21 @@
 
 .question-info__container {
     margin-bottom: 22px;
+}
+
+.delete--button {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    font-size: 20px;
+    font-weight: 800;
+    text-align: center;
+    text-align: center;
+}
+
+.delete--button:hover {
+    cursor: pointer;
+    background-color: rgb(177, 13, 46);
 }
 
 .sidebar {
