--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -22,3 +22,8 @@
     text-decoration: none;
     font-family: "Baloo 2" sans-serif;
 }
+
+.navbar-link:hover {
+    text-decoration: underline;
+    color: #2c0550
+}
