--- a/react-app/src/components/auth/LogoutButton.css
+++ b/react-app/src/components/auth/LogoutButton.css
@@ -1,10 +1,11 @@
 .logout-button {
-    border: 2px solid rgb(181, 201, 243);
-    border-radius: 5px;
-    padding: 2px 4px;
+    border: 2px solid rgb(105, 148, 241);
+    border-radius: 4px;
+    padding: 4px 6px;
     background-color: rgb(181, 201, 243);
 }
 
 .logout-button:hover {
      cursor: pointer;
+     background-color: rgb(105, 148, 241);
  }
