tweaks to css and layout

--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -19,7 +19,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px 0px;
+    padding: Opx 0px 0px 0px;
     margin-bottom: 20px;
     background-color: rgb(154, 154, 253);
 }
