--- a/react-app/src/components/ResponsesDiv/ResponseDiv.css
+++ b/react-app/src/components/ResponsesDiv/ResponseDiv.css
@@ -17,3 +17,10 @@
 .response__drop-down {
     margin-bottom: 22px;
 }
+
+.responses-title {
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 5px;
+    text-decoration: underline;
+}
