--- a/react-app/src/components/ResponseForm/ResponseForm.css
+++ b/react-app/src/components/ResponseForm/ResponseForm.css
@@ -1,8 +1,18 @@
+.question-label__container {
+    border-bottom: 2px solid rgb(105, 148, 241);
+    margin-bottom: 7px;
+}
+
+.question-input {
+    margin-left: 5px;
+}
+
 .response__submit-button {
     margin: 10px 0px;
     border: 2px solid rgb(105, 148, 241);
     border-radius: 4px;
-    padding: 10px;
+    /* padding: 10px; */
+    margin-left: 5px;
     background-color: rgb(181, 201, 243);
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
@@ -11,4 +21,20 @@
 .response__submit-button:hover {
     cursor: pointer;
     background-color: rgb(105, 148, 241);
+}
+
+.response__cancel-button {
+    border: 2px solid rgb(218, 108, 19);
+    background-color: rgb(238, 160, 88);
+    margin-bottom: 20px;
+    margin-left: 5px;
+    border-radius: 4px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+}
+
+.response__cancel-button:hover {
+    cursor: pointer;
+    background-color: rgb(218, 108, 19);
+    /* font-weight: 600; */
 }
