--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -132,7 +132,7 @@ table {
 .errors__container {
   font-family: "Montserrat", sans-serif;
   color: rgb(191, 0, 0);
-  margin-bottom: 5px;
+  text-align: center;
 }
 
 /* .errors-container {
