--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -22,6 +22,13 @@ body {
     text-align: center;
 }
 
+@media screen and (max-width: 1059px) {
+    .home-page__info-container {
+        margin-right: 5%;
+
+     }
+ }
+
 .asterisk-home {
     color: rgba(225, 225, 225, 0.8);
 }
