--- a/react-app/src/components/ResponsesDiv/ResponseDiv.css
+++ b/react-app/src/components/ResponsesDiv/ResponseDiv.css
@@ -25,6 +25,6 @@
     text-decoration: underline;
 }
 
-/* .hidden {
-    visibility: hidden;
-} */
+.response__container {
+    line-height: 25px;
+}
