--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -26,10 +26,11 @@
 
   #search-modal {
     position: fixed;
-    top: 0;
+    top: 2px;
     right: 0;
-    left: 0;
+    left: 5px;
     bottom: 0;
+    width: 25vw;
     display: flex;
     justify-content: center;
     /* align-items: center; */
@@ -46,6 +47,8 @@
   }
 
   #search-modal-content {
+    padding: 0 13px;
+    border-radius: 5px;
     position: absolute;
     background-color:white;
   }
